--- a/web/index.html
+++ b/web/index.html
@@ -29,6 +29,8 @@
 					if(!opts.container) opts.container = "game_frame";
 					if(!opts.assetsURI) opts.assetsURI = "assets.epk";
 					if(!opts.localesURI) opts.localesURI = "lang/";
+					if(!opts.localesURI) opts.relayURL: "wss://reborn-relay.otterdev.repl.co",
+
 					
 					if(!opts.joinServer)  {
 						var q = window.location.search;
